--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,7 +1,14 @@
-name: Update review branch
+name: 'review'
 
 on:
-  workflow_dispatch:
+  pull_request:
+    types: [opened, synchronize, reopened]
+
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+  statuses: write
 
 jobs:
   review:
