Removing Checkov configuration, updating .gitignore to ignore executable files and Lambda directories, and fixing the variable name for the aws_sns_topic resource. Updating README to improve module description

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore executable files
+tflint.exe
+tfsec.exe
+
+# Lambda directories
+builds/
+__pycache__/
