--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,31 +7,5 @@ repos:
     - id: terraform_validate
     - id: terraform_docs
     # - id: terraform_tfsec
-    - id: terraform_checkov
+    # - id: terraform_checkov
     
-formatter: "markdown table"
-header-from: "main.tf"
-footer-from: ""
-sections:
-  show:
-    - header
-    - requirements
-    - providers
-    - resources
-    - inputs
-    - outputs
-sort:
-  enabled: true
-  by: name
-output:
-  file: "README.md"
-  mode: inject
-  template: |-
-    <!-- BEGIN_TF_DOCS -->
-    {{ .Content }}
-    <!-- END_TF_DOCS -->
-recursive:
-  enabled: false
-  follow-symlinks: false
-  ignore:
-    - "examples/*" 
