--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,14 +1,7 @@
-name: 'review'
+name: Update review branch
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-
-permissions:
-  contents: read
-  pull-requests: write
-  issues: write
-  statuses: write
+  workflow_dispatch:
 
 jobs:
   review:
